# competitive-programming

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
doc/: modules.dox
docs/: annotated.html  annotated_dup.js  anymod_8hpp_source.html  batch__range__queries_8hpp_source.html  bit__dict_8hpp_source.html  bit__trie_8hpp_source.html  bmint_8hpp_source.html  classcplib_1_1BarrettModInt-members.html  classcplib_1_1BarrettModInt.html  classcplib_1_1BarrettModInt.js  classcplib_1_1BitDict-members.html  classcplib_1_1BitDict.html  classcplib_1_1BitDict.js  classcplib_1_1BitDictBuilder-members.html  classcplib_1_1BitDictBuilder.html  classcplib_1_1BitDictBuilder.js  classcplib_1_1DynamicMontgomeryReductionContext-members.html  classcplib_1_1DynamicMontgomeryReductionContext.html  classcplib_1_1DynamicMontgomeryReductionContext.js  classcplib_1_1HashTable-members.html  classcplib_1_1HashTable.html  classcplib_1_1HashTable.js  classcplib_1_1ModInt2P61M1-members.html  classcplib_1_1ModInt2P61M1.html  classcplib_1_1ModInt2P61M1.js  classcplib_1_1MontgomeryModInt-members.html  classcplib_1_1MontgomeryModInt.html  classcplib_1_1MontgomeryModInt.js  classcplib_1_1RangeMinQuery-members.html  classcplib_1_1RangeMinQuery.html  classcplib_1_1RangeMinQuery.js  classcplib_1_1SparseTable-members.html  classcplib_1_1SparseTable.html  classcplib_1_1SparseTable.js  classcplib_1_1StaticMontgomeryReductionContext-members.html  classcplib_1_1StaticMontgomeryReductionContext.html  classcplib_1_1StaticSizedBitTrie-members.html  classcplib_1_1StaticSizedBitTrie.html  classcplib_1_1StaticSizedBitTrie.js  classcplib_1_1StaticSizedBitTrie_3_01T_00_01Bits_00_010_01_4-members.html  (+96 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  (+45 more)
scripts/: build_and_publish_docs.sh  format.sh
test/: CMakeLists.txt
test/conv/: anymod_test.cpp  conv_test.cpp  multivar_test.cpp  utils.hpp
test/hash/: hash_table_test.cpp
test/num/: discrete_log_test.cpp  factor_test.cpp  gcd_test.cpp  mmint_test.cpp  mod_math_test.cpp  modint_test.cpp  prime_test.cpp  primitive_root_test.cpp  sqrt_test.cpp
test/order/: bit_trie_test.cpp  dary_heap_test.cpp  pairing_heap_test.cpp
test/range/: batch_range_queries_test.cpp  batch_static_queries_test.cpp  bit_dict_test.cpp  rmq_test.cpp  wavelet_array_test.cpp
(+50 files in other folders)
